feat: revamped content

--- a/src/content/docs/integrations/comment.mdx
+++ b/src/content/docs/integrations/comment.mdx
@@ -90,6 +90,6 @@ import { Comment } from '@/components/waline'
 
 Render:
 
-import { Comment } from '@/components/waline'
+import { Comment } from '@/components/giscus'
 
 <Comment />
