--- a/src/content/blog/blog-in-k8s/blog-in-k8s.mdx
+++ b/src/content/blog/blog-in-k8s/blog-in-k8s.mdx
@@ -12,7 +12,7 @@ tags:
   - DevOps
   - Homelab
 heroImage: { src: './k8s.png', color: '#1567c5ff' }
-draft: false
+draft: true
 enableComment: true
 ---
 
