--- a/src/content/blog/welcome/welcome.mdx
+++ b/src/content/blog/welcome/welcome.mdx
@@ -22,7 +22,7 @@ Over time, I'll have more content posted here, ultimately giving you an idea int
 
 The source code for this blog can be reviewed here:
 
-<GithubCard repo="pipitonelabs/blogv2"/>
+<GithubCard repo="pipitonelabs/pipitonelabs.com"/>
 
 If you want to take a look at my Kubernetes repo, take a look here:
 
