fix: improved Dockerfile and implemented env based adapter selection

--- a/src/content/blog/agentic-ai-experiments/index.mdx
+++ b/src/content/blog/agentic-ai-experiments/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Hands-On with Cline, Kilo Code, and Antigravity"
-description: 'Real-world testing of agentic VSCode extensions and Google''s new Antigravity IDE'
+description: "Real-world testing of agentic VSCode extensions and Google's new Antigravity IDE"
 publishDate: 2025-12-09
 updatedDate: 2025-12-09
 tags:
@@ -11,9 +11,7 @@ tags:
   - Antigravity
   - VSCode
   - IDE
-heroImage:
-  src: './agentic-ai.png'
-  color: '#1a5fb4ff'
+heroImage: { src: './agentic-ai.png', color: '#443da5ff' }
 draft: true
 enableComment: true
 ---
