--- a/src/content/blog/blog-in-k8s/blog-in-k8s.mdx
+++ b/src/content/blog/blog-in-k8s/blog-in-k8s.mdx
@@ -10,7 +10,9 @@ tags:
   - Renovate
   - Flux
   - DevOps
+  - GitOps
   - Homelab
+  - CI/CD
 heroImage: { src: './k8s.png', color: '#1567c5ff' }
 draft: false
 enableComment: true
