fix: updated k8s blog post and Dockerfile to optimize packages dir a bit

--- a/src/content/blog/agentic-ai-experiments/index.mdx
+++ b/src/content/blog/agentic-ai-experiments/index.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Hands-On with Cline, Kilo Code, and Antigravity"
-description: "Real-world testing of agentic VSCode extensions and Google's new Antigravity IDE"
+title: "Hands-On with Cline, Kilo Code, Claude Code and Antigravity"
+description: "Real-world testing of agentic agents like Cline, Kilo Code, Claude Code and Antigravity"
 publishDate: 2025-12-09
 updatedDate: 2025-12-09
 tags:
@@ -18,13 +18,20 @@ enableComment: true
 
 ## Introduction
 
-As a cloud engineer deep in Kubernetes and DevOps, I've been experimenting heavily with agentic AI—systems that can autonomously plan, reason, tool-chain, and execute complex tasks with minimal hand-holding.
+As a cloud engineer focused on leveling up my Kubernetes and modern DevOps expertise, I’m intentionally building real hands-on experience with agentic AI - autonomous agents that can reason step-by-step, orchestrate, and execute complex workflows with almost no hand-holding.
+I’m convinced that if I don't start actively using these tools, I’ll fall behind fast. 
 
-This post shares real hands-on experience with three standout tools: the VSCode extensions **Cline** and **Kilo Code**, plus Google's brand-new **Antigravity** agentic IDE (launched November 2025).
+That’s why I’m experimenting with several different solutions and use cases, to see if I can incorporate them into my day-to-day, and if they improve my workflows. So far, it's been a great experience when it comes to managing my Kubernetes cluster in my HomeLab, and has been a big time saver. I've run a few personal experiments to learn (and move) even faster.
 
-I tested them on escalating DevOps scenarios: Kubernetes disaster recovery planning, Terraform module refactoring, and custom operator development. Evaluation focused on autonomy, accuracy, practicality in production-like workflows, IDE integration, and failure modes/recovery.
+This post shares real hands-on experience with three standout tools: the VSCode extensions **Cline**, **Kilo Code**, **Claude Code**, plus Google's brand-new **Antigravity** agentic IDE (launched November 2025). 
 
-## Methodology
+I tested them on different scenarios: Kubernetes disaster recovery planning, Terraform module refactoring, and custom development of various web apps. My evaluation focused on autonomy, accuracy, IDE and CLI integration, and cost.
+
+## My Testing Process
+
+I have watched various YouTube videos of people who have done extreme benchmarking as well as extremely thorough test cases, which was a good starting point for me to get familiar with.
+
+What I realized is - like many other things - the only way to determine which tool is "best" is to get in there, and see for myself.
 
 Tasks by complexity:
 
